--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "files.associations": {
         "engine.h": "c",
-        "charconv": "c"
+        "charconv": "c",
+        "vector": "c",
+        "vector.h": "c"
     }
 }
