add minimap (TODO: engine class for rendering 3d models)

--- a/src/Makefile
+++ b/src/Makefile
@@ -7,8 +7,8 @@ all: clang main run clean
 
 rebuild: main clean
 
-main: engine.o vector.o player.o main.o
-	$(CC) $(CFLAGS) -lncurses vector.o engine.o player.o main.o -o $(BUILD)/exec
+main: engine.o vector.o player.o vec3.o main.o
+	$(CC) $(CFLAGS) -lncurses vector.o engine.o player.o vec3.o main.o -o $(BUILD)/exec
 
 main.o: main.c
 	$(CC) $(CFLAGS) -c main.c
@@ -18,6 +18,9 @@ player.o: player.h player.c
 
 engine.o: engine.h engine.c
 	$(CC) $(CFLAGS) -c engine.c
+
+vec3.o: vec3.h vec3.c
+	$(CC) $(CFLAGS) -c vec3.c
 
 vector.o: $(LIBS)/vector.c $(LIBS)/vector.h
 	$(CC) $(CFLAGS) -c $(LIBS)/vector.c
